bổ sung vào pom client và sửa la file yml